# format-converter

./: .gitignore  CMakeLists.txt  LICENSE.md  MainWindow.cpp  MainWindow.h  README.md
src/: CommonEnums.h  Converter.cpp  Converter.h  MainWindow.cpp  MainWindow.h  ProgressHandler.cpp  ProgressHandler.h  main.cpp
src/utils/: CommonEnums.h  ConverterArguments.h  DependencyChecker.h
